<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_search_icon_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_margin50dp"
        android:layout_marginTop="@dimen/common_margin10dp"
        android:background="@color/color_white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping_pay_type_please"
            android:textColor="@color/black"
            android:textSize="@dimen/common_size18sp" />
    </LinearLayout>

    <View style="@style/HorizontalLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/color_white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llyt_alipay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/alipay_icon" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shopping_pay_alipay"
                    android:textColor="@color/black"
                    android:textSize="@dimen/common_size20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin5dp"
                    android:text="@string/shopping_pay_alipay_hint"
                    android:textSize="@dimen/common_size16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/common_margin50dp"
                android:src="@mipmap/back_right" />
        </LinearLayout>

        <View
            style="@style/HorizontalLine"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />

        <LinearLayout
            android:id="@+id/llyt_wechat_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/wechat_pay_icon" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shopping_pay_wechatpay"
                    android:textColor="@color/black"
                    android:textSize="@dimen/common_size20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin5dp"
                    android:text="@string/shopping_pay_wechatpay_hint"
                    android:textSize="@dimen/common_size16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/common_margin50dp"
                android:src="@mipmap/back_right" />
        </LinearLayout>

        <View
            style="@style/HorizontalLine"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />


        <View style="@style/HorizontalLine" />

    </LinearLayout>
</LinearLayout>
