<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/shape_index_bg"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="200dp">

        <ImageView
            android:layout_width="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_margin="@dimen/common_margin10dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/common_margin10dp"
            android:text="久碑久道"
            />

    </LinearLayout>


    <!--第一个layout  进入购买商品的页面-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/llyt_main_buyshop"
            android:layout_width="0dp"
            android:layout_height="214dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/color_block_member"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entrance_for_buyshop"
                android:textColor="@color/color_white" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <!--第三个入口  系统设置-->

        <LinearLayout
            android:id="@+id/llyt_main_sys_set"
            android:layout_width="0dp"
            android:layout_height="214dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/color_block_member"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/entrance_for_sys_set"
                android:textColor="@color/color_white" />

        </LinearLayout>

        <!--第四个入口 提货-->

        <LinearLayout
            android:id="@+id/llyt_main_takegoods"
            android:layout_width="0dp"
            android:layout_height="214dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/color_block_member"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_launcher" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entrance_for_take_goods"
                android:textColor="@color/color_white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
