<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dl_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_local_user_check"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <include layout="@layout/title_search_icon_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingTop="@dimen/line_bit_height">

                <View style="@style/HorizontalLine" />

                <LinearLayout
                    android:id="@+id/llyt_shipping_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_white"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/common_margin20dp"
                    android:visibility="gone">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentRight="true"
                            android:src="@mipmap/back_right" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llyt_shop_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin10dp"
                    android:background="@color/color_white"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:padding="@dimen/activity_horizontal_margin">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/iv_shop_1"
                            android:layout_width="@dimen/shopping_check_shop_img"
                            android:layout_height="@dimen/shopping_check_shop_img"
                            android:layout_marginRight="@dimen/common_margin10dp"
                            android:visibility="gone"
                            tools:src="@mipmap/ic_launcher" />

                        <ImageView
                            android:id="@+id/iv_shop_2"
                            android:layout_width="@dimen/shopping_check_shop_img"
                            android:layout_height="@dimen/shopping_check_shop_img"
                            android:layout_marginRight="@dimen/common_margin10dp"
                            android:visibility="gone"
                            tools:src="@mipmap/ic_launcher" />

                        <ImageView
                            android:id="@+id/iv_shop_3"
                            android:layout_width="@dimen/shopping_check_shop_img"
                            android:layout_height="@dimen/shopping_check_shop_img"
                            android:layout_marginRight="@dimen/common_margin10dp"
                            android:visibility="gone"
                            tools:src="@mipmap/ic_launcher" />

                        <ImageView
                            android:id="@+id/iv_shop_4"
                            android:layout_width="@dimen/shopping_check_shop_img"
                            android:layout_height="@dimen/shopping_check_shop_img"
                            android:layout_marginRight="@dimen/common_margin10dp"
                            android:visibility="gone"
                            tools:src="@mipmap/ic_launcher" />

                        <ImageView
                            android:id="@+id/iv_more"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@mipmap/moren_shop"
                            android:visibility="gone" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_total_shop_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/common_margin50dp"
                        android:layout_marginRight="@dimen/common_margin6dp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/common_size18sp"
                        tools:text="共4件商品" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/back_right" />
                </LinearLayout>

                <View style="@style/HorizontalLine" />

                <LinearLayout
                    android:id="@+id/llyt_invoice"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_margin50dp"
                    android:background="@color/color_white"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shopping_check_invoice"
                        android:textColor="@color/black"
                        android:textSize="@dimen/common_size18sp" />

                    <TextView
                        android:id="@+id/tv_invoiceType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/common_margin6dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/shopping_check_do_without"
                        android:textColor="@color/black"
                        android:textSize="@dimen/common_size18sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/back_right" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_margin50dp"
                    android:layout_marginTop="@dimen/common_margin10dp"
                    android:background="@color/color_white"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shopping_check_note_information"
                        android:textColor="@color/black"
                        android:textSize="@dimen/common_size18sp" />

                    <EditText
                        android:id="@+id/et_buyer_remarks"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/common_margin20dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/shopping_check_des_hint"
                        android:imeOptions="actionSearch"
                        android:maxLines="45"
                        android:singleLine="true"
                        android:textSize="@dimen/common_size18sp" />
                </LinearLayout>
            </LinearLayout>

            <View style="@style/VerticalLine" />

            <LinearLayout
                android:layout_width="@dimen/common_right_nav_width"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/shopping_cart_total_height"
                    android:background="@color/color_white"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/common_margin20dp"
                    android:paddingRight="@dimen/common_margin20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shopping_cart_total"
                        android:textSize="@dimen/common_size18sp" />

                    <TextView
                        android:id="@+id/tv_shop_total_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/common_size18sp"
                        tools:text="￥102.63" />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/line_bit_height"
                    android:background="@color/color_white"
                    android:paddingLeft="@dimen/common_margin20dp"
                    android:paddingRight="@dimen/common_margin20dp"
                    android:paddingTop="@dimen/common_margin24dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shopping_cart_total_count"
                        android:textSize="@dimen/common_size18sp" />

                    <TextView
                        android:id="@+id/tv_total_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="￥102.63"
                        android:textColor="@color/black"
                        android:textSize="@dimen/common_size18sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_white"
                    android:paddingBottom="@dimen/common_margin24dp"
                    android:paddingLeft="@dimen/common_margin20dp"
                    android:paddingRight="@dimen/common_margin20dp"
                    android:paddingTop="@dimen/common_margin24dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shopping_cart_be_paid"
                        android:textSize="@dimen/common_size18sp" />

                    <TextView
                        android:id="@+id/tv_be_paid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="￥102.63"
                        android:textColor="@color/color_main"
                        android:textSize="@dimen/common_size25sp" />

                </RelativeLayout>

                <View
                    android:layout_width="0px"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_submit_order"
                    style="@style/GreenButtonStyle"
                    android:layout_height="@dimen/shopping_cart_buttom_height"
                    android:text="@string/shopping_check_submit_order" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_content"
        android:layout_width="@dimen/shopping_list_stair_flilter"
        android:layout_height="match_parent"
        android:layout_gravity="right" />
</android.support.v4.widget.DrawerLayout>

